--- a/index.html
+++ b/index.html
@@ -6,9 +6,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year New Me</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    <section class="total-bg">
+        <header class="header">
+            <!-- header banner -->
+            <div class="banner">
+                <div class="bnr">
+                    <h1 class="title">All Thinks Are
+                        Possible If You
+                        believe</h1>
+
+                    <p class=" banner-dcrp"> I’m a web developer with depth knowledge of HTML,CSS,JS,React-JS.I am a
+                        CSE
+                        department
+                        student. I'm in last year. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint illo
+                        mollitia reprehenderit est ea laboriosam officiis dignissimos amet. </p>
+                    <button class="btn-primary">Contact Us</button>
+
+                </div>
+
+            </div>
+        </header>
+
+    </section>
+    <!-- /* failure section */ -->
+    <main>
+        <section>
+            <div class="person">
+                <img src="images/person.png" alt="">
+            </div>
+            <div>
+                <h1>My failures of
+                    previous year</h1>
+                <br> <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum accusamus et, quisquam odio impedit
+                    error ipsum fugiat cumque labore ut?</p>
+            </div>
+
+        </section>
+    </main>
 
 </body>
 
