--- a/index.html
+++ b/index.html
@@ -35,19 +35,112 @@
     </section>
     <!-- /* failure section */ -->
     <main>
-        <section>
+        <section class="section-1">
             <div class="person">
                 <img src="images/person.png" alt="">
             </div>
-            <div>
-                <h1>My failures of
+            <div class="list">
+                <h1 class="failure">My failures of
                     previous year</h1>
                 <br> <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum accusamus et, quisquam odio impedit
-                    error ipsum fugiat cumque labore ut?</p>
+                <div class="point">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum accusamus et, quisquam odio
+                        impedit
+                        error ipsum fugiat cumque labore ut? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Eveniet, cum.</p>
+                    <br><br>
+                    <ul>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular belief.</li>
+                        <li>Contrary to popular , is not simply.</li>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular simply</li>
+
+                    </ul>
+                </div>
             </div>
 
         </section>
+
+        <!-- my plan -->
+        <section class="section-2">
+            <h1 class="p-title">My Plan</h1>
+            <br><br>
+            <section class="plans">
+                <div>
+                    <img src="images/icons/web.png" alt="">
+                    <h1>Web Development</h1>
+                    <p>I want to start</p>
+                </div>
+                <div>
+                    <img src="images/icons/js.png" alt="">
+                    <h1>Javascript</h1>
+                    <p>I want to learn</p>
+                </div>
+                <div>
+                    <img src="images/icons/smoke.png" alt="">
+                    <h1>Smoking Habit</h1>
+                    <p>I want to end</p>
+                </div>
+                <div>
+                    <img src="images/icons/ecom.png" alt="">
+                    <h1>ecommerce</h1>
+                    <p>I want to develop</p>
+                </div>
+            </section>
+        </section>
+        <!-- watch picture adding -->
+        <section class="section-3">
+            <div class="watch">
+                <div class="call">
+                    <h1>Awlays keep a positive
+                        mindset</h1>
+                    <button class="btn-primary">Call Now</button>
+                </div>
+            </div>
+
+
+        </section>
+        <!-- future section -->
+        <section class="fututre">
+            <div class="f-part">
+                <h1 class="f-title"> Future</h1>
+                <div class="section-dcrp">
+                    <p>If you want to reach me , you can use the follwing links. Or you can mail me as
+                        well. And i attached my CV you can download my CV and can Soverview it.
+                    </p>
+
+                    <br>
+                    <p>Email : info@gmail.com</p>
+                    <p>Phone : 01500 00 00 00</p>
+                </div>
+                <a href="">
+                    <img src="images/icons/fb.png" alt="">
+                </a>
+
+                <a href="">
+                    <img src="images/icons/twitter.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/youtube.png" alt="">
+                </a>
+                <br>
+                <br>
+
+            </div>
+
+            <div class="sub">
+                <h3 class="f-title">Subscribe</h3>
+                <form action="">
+
+                    <input type="text" name="" id="" placeholder="your email" class="email">
+
+                </form>
+                <button class="btn-primary">Subscribe</button>
+
+            </div>
+        </section>
+
     </main>
 
 </body>
